# Tonystarkwasabletobuildthisinacavewithabunchofscraps

./: .env.example  .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt  setup_friday.sh  test.py
.github/workflows/: backend-ci.yml  mobile-build.yml  web-deploy.yml
apps/mobile/: app.json  eas.json  package.json
apps/mobile/app/: _layout.tsx
apps/mobile/components/: StatusPill.tsx  TranscriptList.tsx  (+1 more)
apps/web/: index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
backend/: pyproject.toml
backend/agent/: agent_friday.py  config.py  pyproject.toml
backend/agent/prompts/: friday_system_prompt.py
backend/agent/providers/: llm.py  stt.py  tts.py
backend/agent/tests/: test_providers.py
backend/gateway/: config.py  main.py  models.py  pyproject.toml
backend/gateway/middleware/: auth.py
backend/gateway/routers/: auth.py  events.py  sessions.py
backend/gateway/services/: livekit_service.py  redis_service.py  supabase_service.py
backend/gateway/tests/: test_health.py
backend/mcp_server/: pyproject.toml  server.py
backend/mcp_server/friday/: __init__.py  config.py
backend/mcp_server/friday/prompts/: __init__.py
backend/mcp_server/friday/resources/: __init__.py
backend/mcp_server/friday/tools/: __init__.py  dashboard.py  finance.py  system.py  weather.py  web.py
backend/mcp_server/tests/: test_tools.py
backend/shared/: db.py  models.py
docs/: ARCHITECTURE.md  SETUP.md  TOOLS.md
infra/: Dockerfile.agent  Dockerfile.gateway  Dockerfile.mcp  docker-compose.yml
scripts/: test.sh
(+65 files in other folders)
