[project]
name = "friday-agent"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "livekit-agents[silero]>=1.5.1",
    "livekit-plugins-google>=1.5.1",
    "python-dotenv",
]

[project.scripts]
friday_voice = "agent_friday:dev"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

