[project]
name = "friday-gateway"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi",
    "uvicorn[standard]",
    "python-dotenv",
    "supabase",
    "livekit",
    "livekit-api",
    "redis[asyncio]",
    "httpx",
    "pydantic",
    "pyjwt",
    "python-jose[cryptography]",
]

[project.scripts]
gateway = "main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

